--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,16 +1,22 @@
 <resources>
-    <string name="app_name">AndForObject_B</string>
-    <string name="title_activity_login">LoginActivity</string>
-    <string name="prompt_email">Email</string>
-    <string name="prompt_password">Password</string>
+    <string name="app_name" translatable="false">AndForObject_B</string>
+    <string name="title_activity_login" translatable="false">LoginActivity</string>
+    <string name="prompt_Email">Email</string>
+    <string name="prompt_Password">Password</string>
     <string name="action_sign_in">Sign in or register</string>
     <string name="action_sign_in_short">Sign in</string>
     <string name="welcome">"Welcome !"</string>
     <string name="invalid_username">Not a valid username</string>
     <string name="invalid_password">Password must be >5 characters</string>
     <string name="login_failed">"Login failed"</string>
-    <string name="title_activity_map">ScrollingActivity</string>
-    <string name="large_text">
+    <string name="title_activity_map" translatable="false">ScrollingActivity</string>
+    <string name="name_viev">Name:</string>
+    <string name="surname_viev">SurName:</string>
+    <string name="Email_viev">Email:</string>
+    <string name="Phone_viev">Phone:</string>
+    <string name="position_viev">Position:</string>
+
+    <string name="large_text" translatable="false">
         "Material is the metaphor.\n\n"
 
         "A material metaphor is the unifying theory of a rationalized space and a system of motion."
